--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>This is where you can put the content of your privacy policy.</p>
+    <p>Last updated: [Date]</p>
+
+    <p>Your privacy is important to us. This privacy policy explains that our extension does not collect, transmit, or store any personal information.</p>
+
+    <h2>Information Collection and Use</h2>
+    <p>Our extension does not collect any personal data. It operates solely on your device and does not send any information to me or any third parties.</p>
+
+    <h2>Security</h2>
+    <p>Since no data is collected, there are no security risks associated with personal information.</p>
+
+    <h2>Changes to This Policy</h2>
+    <p>We may update our privacy policy only if any significant changes are made to the extension. Any changes will be reflected on this page.</p>
+
+    <h2>Contact Us</h2>
+    <p>If you have any questions about this privacy policy, do not contact us:</p>
+    <ul>
+        <li>Email: [noneedto@contactus.com]</li>
+    </ul>
+
 </body>
 </html>
