--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>Last updated: [Date]</p>
+    <p>Last updated: [26 September 2024]</p>
 
     <p>Your privacy is important to us. This privacy policy explains that our extension does not collect, transmit, or store any personal information.</p>
 
